<resources>
    <string name="app_name">YouRefuel</string>
    <string name="datos_no_obtenidos">Datos no obtenidos.</string>
    <string name="no_conexion">No hay conexión disponible para obtener los datos.</string>
    <string name="datos_obtenidos">Datos obtenidos con éxito.</string>
    <string name="ubicacion_default">Se tomará como ubicación actual el ayuntamiento de Santander.</string>

    <string name="action_settings"></string>
    <string-array name="tiposCarburante">
        <item>Carburante</item>
        <item>Gasolina 95</item>
        <item>Gasolina 98</item>
        <item>Diésel</item>
        <item>Diésel Super</item>
    </string-array>
    <string-array name="marcas">
        <item>Marca</item>
        <item>Carrefour</item>
        <item>Campsa</item>
        <item>Avia</item>
        <item>Cepsa</item>
        <item>Galp</item>
        <item>Petronor</item>
        <item>Repsol</item>
        <item>Shell</item>
        <item>Otros</item>
    </string-array>
</resources>
