<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/ordenarKm"
        android:title="OrdenKm"
        android:icon="@drawable/km"
        yourapp:showAsAction="ifRoom"  />

    <item
        android:id="@+id/ordenarPrecio"
        android:title="Orden€"
        android:icon="@drawable/euro"
        yourapp:showAsAction="ifRoom"  />

    <item
        android:id="@+id/filtro_setting"
        android:title="Filtros"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/recarga"
        android:title="Limpia Filtros"
        app:showAsAction="never" />

</menu>