<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tipoCarburanteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Elija el tipo de carburante:" />

            <Spinner
                android:id="@+id/spinnerCarburante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/marcaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Elija la marca:" />

            <Spinner
                android:id="@+id/spinnerMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>